trying to fix flickering

--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -104,36 +104,11 @@ highlight a
     
 .img-centre
    margin 0 auto
-   -webkit-backface-visibility hidden
-   animation fadein 2s
-   -moz-animation fadein 2s
-   -webkit-animation fadein 2s
-   -o-animation fadein 2s
+   opacity 0
 
-@keyframes fadein
-    from 
-        opacity:0;
-    to 
-        opacity:1;
-    
-@-moz-keyframes fadein
-  from
-    opacity 0 
-  to
-    opacity 1
-    
-@-webkit-keyframes fadein
-  from
-    opacity 0
-  to 
-    opacity 1
+.pissed
+  opacity 1
 
-@-o-keyframes fadein
-  from
-    opacity 0  
-  to
-    opacity 1
-  
 .singleIll
   position relative
  
